--- a/SocialNetwork/SocialNetwork/index.html
+++ b/SocialNetwork/SocialNetwork/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" ng-app="SocialNetworkApp">
 <head>
     <title>Social Network</title>
+    <link href="styles/bootstrap.min.css" rel="stylesheet" />
     <link href="styles/main-style.css" rel="stylesheet" />
 </head>
 <body>
