Added style to edit profile page

--- a/SocialNetwork/SocialNetwork/index.html
+++ b/SocialNetwork/SocialNetwork/index.html
@@ -26,5 +26,6 @@
     <script src="app/services/CurrentUserQueryExcecutor.js"></script>
     <script src="app/controllers/HeaderController.js"></script>
     <script src="app/controllers/PasswordChangeController.js"></script>
+    <script src="app/controllers/EditProfileController.js"></script>
 </body>
 </html>
