--- a/SocialNetwork/SocialNetwork/index.html
+++ b/SocialNetwork/SocialNetwork/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="styles/main-style.css" rel="stylesheet" />
 </head>
-<body>
+<body ng-cloak>
     <div ng-view="">
 
     </div>
