Added friend Requests

--- a/SocialNetwork/SocialNetwork/index.html
+++ b/SocialNetwork/SocialNetwork/index.html
@@ -27,5 +27,6 @@
     <script src="app/controllers/HeaderController.js"></script>
     <script src="app/controllers/PasswordChangeController.js"></script>
     <script src="app/controllers/EditProfileController.js"></script>
+    <script src="app/controllers/UserProfileController.js"></script>
 </body>
 </html>
