Added FriendBox Added All Friends Page Added Filter for All Friends Page

--- a/SocialNetwork/SocialNetwork/index.html
+++ b/SocialNetwork/SocialNetwork/index.html
@@ -28,5 +28,7 @@
     <script src="app/controllers/PasswordChangeController.js"></script>
     <script src="app/controllers/EditProfileController.js"></script>
     <script src="app/controllers/UserProfileController.js"></script>
+    <script src="app/controllers/HomePageController.js"></script>
+    <script src="app/controllers/FriendsController.js"></script>
 </body>
 </html>
