--- a/SocialNetwork/SocialNetwork/index.html
+++ b/SocialNetwork/SocialNetwork/index.html
@@ -11,10 +11,12 @@
 
     </div>
 
+
+    <script src="libs/jquery.js"></script>
     <script src="libs/angular.js"></script>
+    <script src="libs/ng-infinite-scroll.js"></script>
     <script src="libs/angular-route.js"></script>
     <script src="libs/angular-cookies.js"></script>
-    <script src="libs/jquery.js"></script>
     <script src="libs/jquery.noty.packaged.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/services/Notifications.js"></script>
